modules/envoyproxy/files/fixtures/good/listeners.d/01-http-redirect.yaml
# SPDX-License-Identifier: Apache-2.0
address:
  socket_address:
    address: 0.0.0.0
    port_value: 80
filter_chains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      codec_type: auto
      stat_prefix: ingress_http
      route_config:
        virtual_hosts:
        - name: backend
          domains:
          - "example.com"
          routes:
          - match:
              prefix: "/"
            redirect:
              path_redirect: "/"
              https_redirect: true
      internal_address_config:
        unix_sockets: true
        cidr_ranges:
        - address_prefix: 10.0.0.0
          prefix_len: 8
        - address_prefix: 127.0.0.1
          prefix_len: 32
        - address_prefix: ::1
          prefix_len: 128
      http_filters:
        - name: envoy.filters.http.router
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
